# signet

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .shellcheckrc  AGENT_PROMPT.md  ARCHITECTURE.md  BREAKTHROUGH_SOLUTION.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CODE_REVIEW.md  CONSOLIDATION_PLAN.md  CONTRIBUTING.md  DEVELOPMENT_ROADMAP.md  DOCUMENTATION_CLEANUP_PLAN.md  Dockerfile.test  GEMINI.md  GENERIC_COMPONENTS_REVIEW.md  GRPC_AGENT_IMPLEMENTATION.md  IMPLEMENTATION.md  INVESTIGATION_LOG.md  LICENSE  Makefile  NEXT_STEPS.md  OIDC_INTEGRATION_PLAN.md  PRODUCTION_READINESS_REPORT.md  README.md  README_CMS.md  README_original.md  REBASE_PLAN.md  REVOCATION_TODO.md  ROADMAP.md  SECURITY.md  SECURITY_FIXES_SUMMARY.md  SECURITY_PATH_VALIDATION.md  Signet-v1.0-Gap-Analysis-Roadmap.md  TECHNICAL_DEBT.md  TOUCHID_TODO.md  Taskfile.yml  claude-resume.txt  (+6 more)
.beads/: metadata.json
.claude/: settings.local.json
.crumb/: manifest.json
.crumb/semantic/: discoveries.json
.github/workflows/: ci.yml  claude-code-review.yml  claude.yml  gha-identity.yml  oidc-signing.yml  release.yml  rust-ci.yml  (+2 more)
docs/: CMS_ASN1_SOLUTION.md  CMS_IMPLEMENTATION.md  FEATURE_MATRIX.md  IMPLEMENTATION_SEQUENCE.md  IMPLEMENTATION_STATUS.md  PERFORMANCE.md  README.md  oidc-provider-pattern.md  problem-statement.md  setup-github-actions-oidc.md  sigstore-integration.md  sigstore-vocabulary-map.md  spiffe-vocabulary-map.md
rs/: Cargo.toml  LICENSE-MIT
rs/crates/sign/: Cargo.toml  README.md  cbindgen.toml
rs/crates/sign/src/: cert.rs  cms.rs  error.rs  ffi.rs  lib.rs  oid.rs
(+272 files in other folders)
