[package]
name = "signet-sign"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0 OR MIT"
description = "Ed25519 CMS/PKCS#7 signing and verification (RFC 5652 + RFC 8419)"
repository = "https://github.com/agentic-research/signet"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[features]
default = []
ffi = ["libc"]

[dependencies]
cms = { version = "0.2", default-features = false }
der = { version = "0.7", features = ["derive", "oid", "alloc"] }
x509-cert = { version = "0.2", default-features = false }
spki = { version = "0.7", features = ["alloc"] }
const-oid = { version = "0.9", features = ["db"] }
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
sha2 = "0.10"
thiserror = "1.0"
log = "0.4"
libc = { version = "0.2", optional = true }

[dev-dependencies]
rand = "0.8"
hex = "0.4"
